--- a/json/motherboardComponents.json
+++ b/json/motherboardComponents.json
@@ -79,29 +79,29 @@
         "B660M POWER DDR4|B660M POWER DDR4",
         "B660 DS3H AC DDR4|B660 DS3H AC DDR4",
         "B660 DS3H DDR4|B660 DS3H DDR4",
-        "ddr4|B660M D2H DDR4",
-        "ddr4|B660 DS3H AX DDR4",
-        "ddr4|B660M D3H DDR4",
-        "ddr4|B660M DS3H AX DDR4",
-        "ddr4|B660M DS3H DDR4",
-        "ddr4|B660M GAMING X AX DDR4",
-        "ddr4|B660M GAMING X DDR4",
-        "ddr4|B660M GAMING AC DDR4",
-        "ddr4|B660 GAMING X DDR4",
-        "ddr4|B660M GAMING DDR4",
-        "ddr4|B660M AORUS PRO DDR4",
-        "ddr4|B660M AORUS PRO AX DDR4",
-        "ddr4|B660 AORUS MASTER DDR4"
+        "B660M D2H DDR4|B660M D2H DDR4",
+        "B660 DS3H AX DDR4|B660 DS3H AX DDR4",
+        "B660M D3H DDR4|B660M D3H DDR4",
+        "B660M DS3H AX DDR4|B660M DS3H AX DDR4",
+        "B660M DS3H DDR4|B660M DS3H DDR4",
+        "B660M GAMING X AX DDR4|B660M GAMING X AX DDR4",
+        "B660M GAMING X DDR4|B660M GAMING X DDR4",
+        "B660M GAMING AC DDR4|B660M GAMING AC DDR4",
+        "B660 GAMING X DDR4|B660 GAMING X DDR4",
+        "B660M GAMING DDR4|B660M GAMING DDR4",
+        "B660M AORUS PRO DDR4|B660M AORUS PRO DDR4",
+        "B660M AORUS PRO AX DDR4|B660M AORUS PRO AX DDR4",
+        "B660 AORUS MASTER DDR4|B660 AORUS MASTER DDR4"
     ],
     "b660asus": [
         "select motherboard|Select Motherboard",
         "ROG STRIX B660-G GAMING WIFI DDR5|ROG STRIX B660-G GAMING WIFI DDR5",
-        "ddr5|ROG STRIX B660-F GAMING WIFI DDR5",
-        "ddr5|ROG STRIX B660-I GAMING WIFI DDR5",
-        "ddr4|ROG STRIX B660-G DDR4",
-        "ddr4|ROG STRIX B660-A GAMING WIFI  DDR4",
-        "ddr4|ROG STRIX B660-I GAMING WIFI  DDR4",
-        "ddr4|TUF GAMING B660-PLUS WIFI D4  DDR4"
+        "ROG STRIX B660-F GAMING WIFI DDR5|ROG STRIX B660-F GAMING WIFI DDR5",
+        "ROG STRIX B660-I GAMING WIFI DDR5|ROG STRIX B660-I GAMING WIFI DDR5",
+        "ROG STRIX B660-G DDR4|ROG STRIX B660-G DDR4",
+        "ROG STRIX B660-A GAMING WIFI  DDR4|ROG STRIX B660-A GAMING WIFI  DDR4",
+        "ROG STRIX B660-I GAMING WIFI  DDR4|ROG STRIX B660-I GAMING WIFI  DDR4",
+        "TUF GAMING B660-PLUS WIFI D4  DDR4|TUF GAMING B660-PLUS WIFI D4  DDR4"
     ],
     "z690": [
         "select brand|Select Brand",
@@ -110,51 +110,51 @@
     ],
     "z690gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr5|Z690 GAMING X DDR5",
-        "ddr5|Z690I AORUS ULTRA DDR5",
-        "ddr5|Z690 AORUS TACHYON DDR5",
-        "ddr5|Z690 AORUS ELITE DDR5",
-        "ddr5|Z690 AORUS PRO DDR5",
-        "ddr5|Z690 AORUS MASTER DDR5",
-        "ddr5|Z690 AORUS XTREME DDR5",
-        "ddr5|Z690 UD DDR5",
-        "ddr5|Z690 UD AC DDR5",
-        "ddr5|Z690 UD AX DDR5",
-        "ddr5|Z690 AORUS XTREME WATERFORCE DDR5",
-        "ddr5|Z690 AORUS ELITE AX DDR5",
-        "ddr5|Z690I AORUS ULTRA LITE DDR5",
-        "ddr5|Z690I AORUS ULTRA PLUS DDR5",
-        "ddr4|Z690 UD DDR4",
-        "ddr4|Z690 UD AX DDR4",
-        "ddr4|Z690M DS3H DDR4",
-        "ddr4|Z690 AORUS ELITE AX DDR4 V2",
-        "ddr4|Z690 AORUS ELITE DDR4 V2",
-        "ddr4|Z690I AORUS ULTRA LITE DDR4",
-        "ddr4|Z690I AORUS ULTRA PLUS DDR4",
-        "ddr4|Z690 AORUS PRO DDR4",
-        "ddr4|Z690 AORUS ELITE AX DDR4",
-        "ddr4|Z690 AORUS ELITE DDR4",
-        "ddr4|Z690I AORUS ULTRA DDR4",
-        "ddr4|Z690M AORUS ELITE DDR4",
-        "ddr4|Z690M AORUS ELITE AX DDR4"
+        "Z690 GAMING X DDR5|Z690 GAMING X DDR5",
+        "Z690I AORUS ULTRA DDR5|Z690I AORUS ULTRA DDR5",
+        "Z690 AORUS TACHYON DDR5|Z690 AORUS TACHYON DDR5",
+        "Z690 AORUS ELITE DDR5|Z690 AORUS ELITE DDR5",
+        "Z690 AORUS PRO DDR5|Z690 AORUS PRO DDR5",
+        "Z690 AORUS MASTER DDR5|Z690 AORUS MASTER DDR5",
+        "Z690 AORUS XTREME DDR5|Z690 AORUS XTREME DDR5",
+        "Z690 UD DDR5|Z690 UD DDR5",
+        "Z690 UD AC DDR5|Z690 UD AC DDR5",
+        "Z690 UD AX DDR5|Z690 UD AX DDR5",
+        "Z690 AORUS XTREME WATERFORCE DDR5|Z690 AORUS XTREME WATERFORCE DDR5",
+        "Z690 AORUS ELITE AX DDR5|Z690 AORUS ELITE AX DDR5",
+        "Z690I AORUS ULTRA LITE DDR5|Z690I AORUS ULTRA LITE DDR5",
+        "Z690I AORUS ULTRA PLUS DDR5|Z690I AORUS ULTRA PLUS DDR5",
+        "Z690 UD DDR4|Z690 UD DDR4",
+        "Z690 UD AX DDR4|Z690 UD AX DDR4",
+        "Z690M DS3H DDR4|Z690M DS3H DDR4",
+        "Z690 AORUS ELITE AX DDR4 V2|Z690 AORUS ELITE AX DDR4 V2",
+        "Z690 AORUS ELITE DDR4 V2|Z690 AORUS ELITE DDR4 V2",
+        "Z690I AORUS ULTRA LITE DDR4|Z690I AORUS ULTRA LITE DDR4",
+        "Z690I AORUS ULTRA PLUS DDR4|Z690I AORUS ULTRA PLUS DDR4",
+        "Z690 AORUS PRO DDR4|Z690 AORUS PRO DDR4",
+        "Z690 AORUS ELITE AX DDR4|Z690 AORUS ELITE AX DDR4",
+        "Z690 AORUS ELITE DDR4|Z690 AORUS ELITE DDR4",
+        "Z690I AORUS ULTRA DDR4|Z690I AORUS ULTRA DDR4",
+        "Z690M AORUS ELITE DDR4|Z690M AORUS ELITE DDR4",
+        "Z690M AORUS ELITE AX DDR4|Z690M AORUS ELITE AX DDR4"
     ],
     "z690asus": [
         "select motherboard|Select Motherboard",
-        "ddr5|ROG MAXIMUS Z690 HERO EVA EDITION DDR5",
-        "ddr5|ROG STRIX Z690-A GAMING WIFI DDR5",
-        "ddr4|ROG MAXIMUS Z690 HERO DDR4",
-        "ddr4|ROG STRIX Z690-A GAMING WIFI DDR4",
-        "ddr4|ROG MAXIMUS Z690 FORMULA DDR4",
-        "ddr4|ROG MAXIMUS Z690 APEX DDR4",
-        "ddr4|ROG STRIX Z690-E GAMING WIFI DDR4",
-        "ddr4|ROG STRIX Z690-I GAMING WIFI DDR4",
-        "ddr4|ROG STRIX Z690-G GAMING WIFI DDR4",
-        "ddr4|ROG STRIX Z690-A GAMING WIFI D4 DDR4",
-        "ddr4|ROG STRIX Z690-F GAMING WIFI DDR4",
-        "ddr4|ROG MAXIMUS Z690 EXTREME DDR4",
-        "ddr4|ROG MAXIMUS Z690 EXTREME GLACIAL DDR4",
-        "ddr4|ROG MAXIMUS Z690 HERO DDR4",
-        "ddr4|TUF GAMING Z690-PLUS WIFI DDR4"
+        "ROG MAXIMUS Z690 HERO EVA EDITION DDR5|ROG MAXIMUS Z690 HERO EVA EDITION DDR5",
+        "ROG STRIX Z690-A GAMING WIFI DDR5|ROG STRIX Z690-A GAMING WIFI DDR5",
+        "ROG MAXIMUS Z690 HERO DDR4|ROG MAXIMUS Z690 HERO DDR4",
+        "ROG STRIX Z690-A GAMING WIFI DDR4|ROG STRIX Z690-A GAMING WIFI DDR4",
+        "ROG MAXIMUS Z690 FORMULA DDR4|ROG MAXIMUS Z690 FORMULA DDR4",
+        "ROG MAXIMUS Z690 APEX DDR4|ROG MAXIMUS Z690 APEX DDR4",
+        "ROG STRIX Z690-E GAMING WIFI DDR4|ROG STRIX Z690-E GAMING WIFI DDR4",
+        "ROG STRIX Z690-I GAMING WIFI DDR4|ROG STRIX Z690-I GAMING WIFI DDR4",
+        "ROG STRIX Z690-G GAMING WIFI DDR4|ROG STRIX Z690-G GAMING WIFI DDR4",
+        "ROG STRIX Z690-A GAMING WIFI D4 DDR4|ROG STRIX Z690-A GAMING WIFI D4 DDR4",
+        "ROG STRIX Z690-F GAMING WIFI DDR4|ROG STRIX Z690-F GAMING WIFI DDR4",
+        "ROG MAXIMUS Z690 EXTREME DDR4|ROG MAXIMUS Z690 EXTREME DDR4",
+        "ROG MAXIMUS Z690 EXTREME GLACIAL DDR4|ROG MAXIMUS Z690 EXTREME GLACIAL DDR4",
+        "ROG MAXIMUS Z690 HERO DDR4|ROG MAXIMUS Z690 HERO DDR4",
+        "TUF GAMING Z690-PLUS WIFI DDR4|TUF GAMING Z690-PLUS WIFI DDR4"
     ],
     "h610": [
         "select brand|Select Brand",
@@ -163,21 +163,21 @@
     ],
     "h610gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr5|H610M HD3P DDR5",
-        "ddr4|H610M S2 DDR4",
-        "ddr4|H610M H DDR4",
-        "ddr4|H610M S2H DDR4",
-        "ddr4|H610I DDR4"
+        "H610M HD3P DDR5|H610M HD3P DDR5",
+        "H610M S2 DDR4|H610M S2 DDR4",
+        "H610M H DDR4|H610M H DDR4",
+        "H610M S2H DDR4|H610M S2H DDR4",
+        "H610I DDR4|H610I DDR4"
     ],
     "h610asus": [
         "select motherboard|Select Motherboard",
-        "ddr4|PRIME H610M-F D4-CSM  DDR4",
-        "ddr4|PRIME H610I-PLUS D4-CSM  DDR4",
-        "ddr4|PRIME H610I-PLUS D4  DDR4",
-        "ddr4|PRIME H610M-F D4  DDR4",
-        "ddr4|PRIME H610M-D D4-CSM  DDR4",
-        "ddr4|PRIME H610M-D D4  DDR4",
-        "ddr4|PRIME H610M-E D4  DDR4"
+        "PRIME H610M-F D4-CSM  DDR4|PRIME H610M-F D4-CSM  DDR4",
+        "PRIME H610I-PLUS D4-CSM  DDR4|PRIME H610I-PLUS D4-CSM  DDR4",
+        "PRIME H610I-PLUS D4  DDR4|PRIME H610I-PLUS D4  DDR4",
+        "PRIME H610M-F D4  DDR4|PRIME H610M-F D4  DDR4",
+        "PRIME H610M-D D4-CSM  DDR4|PRIME H610M-D D4-CSM  DDR4",
+        "PRIME H610M-D D4  DDR4|PRIME H610M-D D4  DDR4",
+        "PRIME H610M-E D4  DDR4|PRIME H610M-E D4  DDR4"
     ],
     "lga1200": [
         "select chipset|Select Chipset",
@@ -194,19 +194,19 @@
     ],
     "z590gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr4|Z590 AORUS XTREME WATERFORCE",
-        "ddr4|Z590 AORUS XTREME",
-        "ddr4|Z590 AORUS MASTER",
-        "ddr4|Z590I AORUS ULTRA",
-        "ddr4|Z590 AORUS PRO AX",
-        "ddr4|Z590 AORUS ELITE AX",
-        "ddr4|Z590 AORUS ELITE",
-        "ddr4|Z590 AORUS TACHYON"
+        "Z590 AORUS XTREME WATERFORCE|Z590 AORUS XTREME WATERFORCE",
+        "Z590 AORUS XTREME|Z590 AORUS XTREME",
+        "Z590 AORUS MASTER|Z590 AORUS MASTER",
+        "Z590I AORUS ULTRA|Z590I AORUS ULTRA",
+        "Z590 AORUS PRO AX|Z590 AORUS PRO AX",
+        "Z590 AORUS ELITE AX|Z590 AORUS ELITE AX",
+        "Z590 AORUS ELITE|Z590 AORUS ELITE",
+        "Z590 AORUS TACHYON|Z590 AORUS TACHYON"
     ],
     "z590asus": [
         "select motherboard|Select Motherboard",
-        "ddr4|ROG STRIX Z590-A GAMING WIFI II",
-        "ddr4|TUF GAMING Z590-PLUS"
+        "ROG STRIX Z590-A GAMING WIFI II|ROG STRIX Z590-A GAMING WIFI II",
+        "TUF GAMING Z590-PLUS|TUF GAMING Z590-PLUS"
     ],
     "z490": [
         "select brand|Select Brand",
@@ -215,20 +215,20 @@
     ],
     "z490gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr4|Z490 AORUS XTREME WATERFORCE",
-        "ddr4|Z490 AORUS MASTER WATERFORCE",
-        "ddr4|Z490 AORUS XTREME",
-        "ddr4|Z490 AORUS MASTER",
-        "ddr4|Z490 AORUS ULTRA G2",
-        "ddr4|Z490I AORUS ULTRA",
-        "ddr4|Z490 AORUS PRO AX",
-        "ddr4|Z490 AORUS ELITE"
+        "Z490 AORUS XTREME WATERFORCE|Z490 AORUS XTREME WATERFORCE",
+        "Z490 AORUS MASTER WATERFORCE|Z490 AORUS MASTER WATERFORCE",
+        "Z490 AORUS XTREME|Z490 AORUS XTREME",
+        "Z490 AORUS MASTER|Z490 AORUS MASTER",
+        "Z490 AORUS ULTRA G2|Z490 AORUS ULTRA G2",
+        "Z490I AORUS ULTRA|Z490I AORUS ULTRA",
+        "Z490 AORUS PRO AX|Z490 AORUS PRO AX",
+        "Z490 AORUS ELITE|Z490 AORUS ELITE"
     ],
     "z490asus": [
         "select motherboard|Select Motherboard",
-        "ddr4|TUF GAMING Z490-PLUS",
-        "ddr4|TUF GAMING Z490-PLUS (WI-FI)",
-        "ddr4|ROG MAXIMUS XIII APEX"
+        "TUF GAMING Z490-PLUS|TUF GAMING Z490-PLUS",
+        "TUF GAMING Z490-PLUS (WI-FI)|TUF GAMING Z490-PLUS (WI-FI)",
+        "ROG MAXIMUS XIII APEX|ROG MAXIMUS XIII APEX"
     ],
     "b560": [
         "select brand|Select Brand",
@@ -236,9 +236,9 @@
     ],
     "b560gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr4|B560M AORUS ELITE",
-        "ddr4|B560 AORUS PRO AX",
-        "ddr4|B560M AORUS PRO"
+        "B560M AORUS ELITE|B560M AORUS ELITE",
+        "B560 AORUS PRO AX|B560 AORUS PRO AX",
+        "B560M AORUS PRO|B560M AORUS PRO"
     ],
     "b460": [
         "select brand|Select Brand",
@@ -247,17 +247,17 @@
     ],
     "b460gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr4|B460M AORUS ELITE",
-        "ddr4|B460 AORUS PRO AC",
-        "ddr4|B460 AORUS PRO"
+        "B460M AORUS ELITE|B460M AORUS ELITE",
+        "B460 AORUS PRO AC|B460 AORUS PRO AC",
+        "B460 AORUS PRO|B460 AORUS PRO"
     ],
     "b460asus": [
         "select motherboard|Select Motherboard",
-        "ddr4|TUF GAMING B460M-PRO",
-        "ddr4|TUF GAMING B460M-PLUS(WI-FI)",
-        "ddr4|TUF GAMING B460-PLUS",
-        "ddr4|TUF GAMING B460M-PLUS",
-        "ddr4|TUF GAMING B460M-PRO (WI-FI)"
+        "TUF GAMING B460M-PRO|TUF GAMING B460M-PRO",
+        "TUF GAMING B460M-PLUS(WI-FI)|TUF GAMING B460M-PLUS(WI-FI)",
+        "TUF GAMING B460-PLUS|TUF GAMING B460-PLUS",
+        "TUF GAMING B460M-PLUS|TUF GAMING B460M-PLUS",
+        "TUF GAMING B460M-PRO (WI-FI)|TUF GAMING B460M-PRO (WI-FI)"
     ],
     "h470": [
         "select brand|Select Brand",
@@ -266,13 +266,13 @@
     ],
     "h470gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr4|H470 AORUS PRO AX",
-        "ddr4|H470I AORUS PRO AX"
+        "H470 AORUS PRO AX|H470 AORUS PRO AX",
+        "H470I AORUS PRO AX|H470I AORUS PRO AX"
     ],
     "h470asus": [
         "select motherboard|Select Motherboard",
-        "ddr4|TUF GAMING H470-PRO",
-        "ddr4|TUF GAMING H470-PRO (WI-FI)"
+        "TUF GAMING H470-PRO|TUF GAMING H470-PRO",
+        "TUF GAMING H470-PRO (WI-FI)|TUF GAMING H470-PRO (WI-FI)"
     ],
     "lga1151": [
         "select chipset|Select Chipset",
@@ -288,30 +288,30 @@
     ],
     "z390gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr4|Z390 AORUS MASTER G2 Edition",
-        "ddr4|Z390 AORUS XTREME WATERFORCE 5G",
-        "ddr4|Z390 AORUS XTREME WATERFORCE",
-        "ddr4|Z390 AORUS XTREME",
-        "ddr4|Z390 DESIGNARE",
-        "ddr4|Z390 AORUS MASTER",
-        "ddr4|Z390 AORUS ULTRA",
-        "ddr4|Z390 AORUS PRO",
-        "ddr4|Z390 AORUS PRO WIFI",
-        "ddr4|Z390 AORUS ELITE",
-        "ddr4|Z390 I AORUS PRO WIFI",
-        "ddr4|Z390 GAMING SLI",
-        "ddr4|Z390 GAMING X",
-        "ddr4|Z390M GAMING",
-        "ddr4|Z390 UD"
+        "Z390 AORUS MASTER G2 Edition|Z390 AORUS MASTER G2 Edition",
+        "Z390 AORUS XTREME WATERFORCE 5G|Z390 AORUS XTREME WATERFORCE 5G",
+        "Z390 AORUS XTREME WATERFORCE|Z390 AORUS XTREME WATERFORCE",
+        "Z390 AORUS XTREME|Z390 AORUS XTREME",
+        "Z390 DESIGNARE|Z390 DESIGNARE",
+        "Z390 AORUS MASTER|Z390 AORUS MASTER",
+        "Z390 AORUS ULTRA|Z390 AORUS ULTRA",
+        "Z390 AORUS PRO|Z390 AORUS PRO",
+        "Z390 AORUS PRO WIFI|Z390 AORUS PRO WIFI",
+        "Z390 AORUS ELITE|Z390 AORUS ELITE",
+        "Z390 I AORUS PRO WIFI|Z390 I AORUS PRO WIFI",
+        "Z390 GAMING SLI|Z390 GAMING SLI",
+        "Z390 GAMING X|Z390 GAMING X",
+        "Z390M GAMING|Z390M GAMING",
+        "Z390 UD|Z390 UD"
     ],
     "z390asus": [
         "select motherboard|Select Motherboard",
-        "ddr4|TUF Z390M-PRO GAMING (WI-FI)",
-        "ddr4|TUF Z390M-PLUS GAMING (WI-FI)",
-        "ddr4|TUF Z390-PRO GAMING",
-        "ddr4|TUF Z390M-PRO GAMING",
-        "ddr4|TUF Z390-PLUS GAMING",
-        "ddr4|TUF Z390-PLUS GAMING II"
+        "TUF Z390M-PRO GAMING (WI-FI)|TUF Z390M-PRO GAMING (WI-FI)",
+        "TUF Z390M-PLUS GAMING (WI-FI)|TUF Z390M-PLUS GAMING (WI-FI)",
+        "TUF Z390-PRO GAMING|TUF Z390-PRO GAMING",
+        "TUF Z390M-PRO GAMING|TUF Z390M-PRO GAMING",
+        "TUF Z390-PLUS GAMING|TUF Z390-PLUS GAMING",
+        "TUF Z390-PLUS GAMING II|TUF Z390-PLUS GAMING II"
     ],
     "z370": [
         "select brand|Select Brand",
@@ -320,19 +320,19 @@
     ],
     "z370gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr4|Z370 AORUS GAMING 7",
-        "ddr4|Z370 AORUS ULTRA GAMING 2.0",
-        "ddr4|Z370 AORUS ULTRA GAMING WIFI",
-        "ddr4|Z370 AORUS ULTRA GAMING",
-        "ddr4|Z370 AORUS GAMING 5",
-        "ddr4|Z370 AORUS GAMING 3",
-        "ddr4|Z370 AORUS GAMING K3",
-        "ddr4|Z370 AORUS GAMING WIFI"
+        "Z370 AORUS GAMING 7|Z370 AORUS GAMING 7",
+        "Z370 AORUS ULTRA GAMING 2.0|Z370 AORUS ULTRA GAMING 2.0",
+        "Z370 AORUS ULTRA GAMING WIFI|Z370 AORUS ULTRA GAMING WIFI",
+        "Z370 AORUS ULTRA GAMING|Z370 AORUS ULTRA GAMING",
+        "Z370 AORUS GAMING 5|Z370 AORUS GAMING 5",
+        "Z370 AORUS GAMING 3|Z370 AORUS GAMING 3",
+        "Z370 AORUS GAMING K3|Z370 AORUS GAMING K3",
+        "Z370 AORUS GAMING WIFI|Z370 AORUS GAMING WIFI"
     ],
     "z370asus": [
         "select motherboard|Select Motherboard",
-        "ddr4|TUF Z370-PLUS GAMING",
-        "ddr4|TUF Z370-PRO GAMING"
+        "TUF Z370-PLUS GAMING|TUF Z370-PLUS GAMING",
+        "TUF Z370-PRO GAMING|TUF Z370-PRO GAMING"
     ],
     "h370": [
         "select brand|Select Brand",
@@ -340,8 +340,8 @@
     ],
     "h370gigabyte": [
         "select motherboard|Select Motherboard",
-        "ddr4|H370 AORUS GAMING 3 WIFI",
-        "ddr4|H370 AORUS GAMING 3"
+        "H370 AORUS GAMING 3 WIFI|H370 AORUS GAMING 3 WIFI",
+        "H370 AORUS GAMING 3|H370 AORUS GAMING 3"
     ],
     "b360b365": [
         "select brand|Select Brand",
