--- a/json/psuComponents.json
+++ b/json/psuComponents.json
@@ -58,19 +58,19 @@
     ],
     "nm60080b": [
         "select psu|Select PSU",
-        "psu|Cooler Master MWE 650 Bronze - V2 Full Range",
-        "psu|DeepCool DA600",
-        "psu|Thermaltake Smart BX1 650W",
-        "psu|Thermaltake Smart BX1 RGB 650W",
-        "psu|Gigabyte GreenMax Plus 650W"
+        "Cooler Master MWE 650 Bronze - V2 Full Range|Cooler Master MWE 650 Bronze - V2 Full Range",
+        "DeepCool DA600|DeepCool DA600",
+        "Thermaltake Smart BX1 650W|Thermaltake Smart BX1 650W",
+        "Thermaltake Smart BX1 RGB 650W|Thermaltake Smart BX1 RGB 650W",
+        "Gigabyte GreenMax Plus 650W|Gigabyte GreenMax Plus 650W"
     ],
     "nm60080g": [
         "select psu|Select PSU",
-        "psu|Cooler Master G600 Gold",
-        "psu|Cooler Master MWE Gold 650 - V2",
-        "psu|Thermaltake Toughpower GX1 600W Gold",
-        "psu|Thermaltake Toughpower GX1 RGB 600W Gold",
-        "psu|Gigabyte P650G"
+        "Cooler Master G600 Gold|Cooler Master G600 Gold",
+        "Cooler Master MWE Gold 650 - V2|Cooler Master MWE Gold 650 - V2",
+        "Thermaltake Toughpower GX1 600W Gold|Thermaltake Toughpower GX1 600W Gold",
+        "Thermaltake Toughpower GX1 RGB 600W Gold|Thermaltake Toughpower GX1 RGB 600W Gold",
+        "Gigabyte P650G|Gigabyte P650G"
     ],
     "nm700": [
         "select rating|Select Rating",
@@ -80,25 +80,25 @@
     ],
     "nm700s": [
         "select psu|Select PSU",
-        "psu|Cooler Master MWE 750 White 230V - V2",
-        "psu|Cooler Master MWE 700 White 230V - V2",
-        "psu|Thermaltake Smart RGB 700W (230V)",
-        "psu|Thermaltake Smart 700W"
+        "Cooler Master MWE 750 White 230V - V2|Cooler Master MWE 750 White 230V - V2",
+        "Cooler Master MWE 700 White 230V - V2|Cooler Master MWE 700 White 230V - V2",
+        "Thermaltake Smart RGB 700W (230V)|Thermaltake Smart RGB 700W (230V)",
+        "Thermaltake Smart 700W|Thermaltake Smart 700W"
     ],
     "nm70080b": [
         "select psu|Select PSU",
-        "psu|Cooler MAster MWE 750 Bronze - V2 Full Range",
-        "psu|DeepCool DA700",
-        "psu|Thermaltake Smart BX1 750W",
-        "psu|Thermaltake Smart BX1 RGB 750W"
+        "Cooler MAster MWE 750 Bronze - V2 Full Range|Cooler MAster MWE 750 Bronze - V2 Full Range",
+        "DeepCool DA700|DeepCool DA700",
+        "Thermaltake Smart BX1 750W|Thermaltake Smart BX1 750W",
+        "Thermaltake Smart BX1 RGB 750W|Thermaltake Smart BX1 RGB 750W"
     ],
     "nm70080g": [
         "select psu|Select PSU",
-        "psu|Cooler Master G700 Gold",
-        "psu|Cooler Master MWE Gold 750 - V2",
-        "psu|DeepCool DQ750ST",
-        "psu|Thermaltake Toughpower GX1 700W Gold",
-        "psu|Thermaltake Toughpower GX1 RGB 700W Gold"
+        "Cooler Master G700 Gold|Cooler Master G700 Gold",
+        "Cooler Master MWE Gold 750 - V2|Cooler Master MWE Gold 750 - V2",
+        "DeepCool DQ750ST|DeepCool DQ750ST",
+        "Thermaltake Toughpower GX1 700W Gold|Thermaltake Toughpower GX1 700W Gold",
+        "Thermaltake Toughpower GX1 RGB 700W Gold|Thermaltake Toughpower GX1 RGB 700W Gold"
     ],
     "nm800": [
         "select rating|Select Rating",
@@ -106,8 +106,8 @@
     ],
     "nm80080g": [
         "select psu|Select PSU",
-        "psu|Cooler Master G800 Gold",
-        "psu|Cooler Master MWE Gold 850 - V2"
+        "Cooler Master G800 Gold|Cooler Master G800 Gold",
+        "Cooler Master MWE Gold 850 - V2|Cooler Master MWE Gold 850 - V2"
     ],
     "semimodular": [
         "select wattage|select Wattage",
@@ -124,14 +124,14 @@
     ],
     "sm50080b": [
         "select psu|Select PSU",
-        "psu|Cooler Master MasterWatt 550",
-        "psu|Cooler Master MasterWatt 550 TUF Gaming Edition",
-        "psu|Thermaltake Smart DPS G 500W Bronze",
-        "psu|Thermaltake Smart BM2 550W - TT Premium Edition"
+        "Cooler Master MasterWatt 550|Cooler Master MasterWatt 550",
+        "Cooler Master MasterWatt 550 TUF Gaming Edition|Cooler Master MasterWatt 550 TUF Gaming Edition",
+        "Thermaltake Smart DPS G 500W Bronze|Thermaltake Smart DPS G 500W Bronze",
+        "Thermaltake Smart BM2 550W - TT Premium Edition|Thermaltake Smart BM2 550W - TT Premium Edition"
     ],
     "sm50080g": [
         "select psu|Select PSU",
-        "psu|Thermaltake Toughpower 550W Gold (Modular)"
+        "Thermaltake Toughpower 550W Gold (Modular)|Thermaltake Toughpower 550W Gold (Modular)"
     ],
     "sm600": [
         "select rating|Select Rating",
@@ -140,15 +140,15 @@
     ],
     "sm60080b": [
         "select psu|Select PSU",
-        "psu|Cooler Master MasterWatt 650",
-        "psu|Cooler Master MasterWatt 650 TUF Gaming Edition",
-        "psu|Thermaltake Smart BM2 650W - TT Premium Edition",
-        "psu|ThermaltakeSmart DPS G 600W Bronze",
-        "psu|Thermaltake Smart M 650W Bronze"
+        "Cooler Master MasterWatt 650|Cooler Master MasterWatt 650",
+        "Cooler Master MasterWatt 650 TUF Gaming Edition|Cooler Master MasterWatt 650 TUF Gaming Edition",
+        "Thermaltake Smart BM2 650W - TT Premium Edition|Thermaltake Smart BM2 650W - TT Premium Edition",
+        "ThermaltakeSmart DPS G 600W Bronze|ThermaltakeSmart DPS G 600W Bronze",
+        "Thermaltake Smart M 650W Bronze|Thermaltake Smart M 650W Bronze"
     ],
     "sm60080g": [
         "select psu|Select PSU",
-        "psu|Thermaltake Toughpower 650W Gold (Modular)"
+        "Thermaltake Toughpower 650W Gold (Modular)|Thermaltake Toughpower 650W Gold (Modular)"
     ],
     "sm700": [
         "select rating|Select Rating",
@@ -157,16 +157,16 @@
     ],
     "sm70080b": [
         "select psu|Select PSU",
-        "psu|Cooler Master MasterWatt 750",
-        "psu|Cooler Master MasterWatt 750 TUF Gaming Edition",
-        "psu|Thermaltake Smart DPS G 700w Bronze",
-        "psu|Thermaltake Smart M 750W Bronze",
-        "psu|Gigabyte B-H 700W"
+        "Cooler Master MasterWatt 750|Cooler Master MasterWatt 750",
+        "Cooler Master MasterWatt 750 TUF Gaming Edition|Cooler Master MasterWatt 750 TUF Gaming Edition",
+        "Thermaltake Smart DPS G 700w Bronze|Thermaltake Smart DPS G 700w Bronze",
+        "Thermaltake Smart M 750W Bronze|Thermaltake Smart M 750W Bronze",
+        "Gigabyte B-H 700W|Gigabyte B-H 700W"
     ],
     "sm70080g": [
         "select psu|Select PSU",
-        "psu|Thermaltake Toughpower 750W Gold (Modular)",
-        "psu|Gigabyte GP-G750H"
+        "Thermaltake Toughpower 750W Gold (Modular)|Thermaltake Toughpower 750W Gold (Modular)",
+        "Gigabyte GP-G750H|Gigabyte GP-G750H"
     ],
     "sm800": [
         "select rating|Select Rating",
@@ -176,15 +176,15 @@
     ],
     "sm800s": [
         "select psu|Select PSU",
-        "psu|Gigabyte Odin GT"
+        "Gigabyte Odin GT|Gigabyte Odin GT"
     ],
     "sm80080b": [
         "select psu|Select PSU",
-        "psu|Thermaltake Smart M 850W Bronze"
+        "Thermaltake Smart M 850W Bronze|Thermaltake Smart M 850W Bronze"
     ],
     "sm80080g": [
         "select psu|Select PSU",
-        "psu|Thermaltake Toughpower 850W GOLD"
+        "Thermaltake Toughpower 850W GOLD|Thermaltake Toughpower 850W GOLD"
     ],
     "sm1000": [
         "select rating|Select Rating",
@@ -192,10 +192,10 @@
     ],
     "sm100080g": [
         "select psu|Select PSU",
-        "psu|Thermaltake Toughpower 1000W GOLD",
-        "psu|Thermaltake Toughpower Grand 1050W",
-        "psu|Thermaltake Toughpower 1200W GOLD",
-        "psu|Thermaltake Toughpower 1500W Gold"
+        "Thermaltake Toughpower 1000W GOLD|Thermaltake Toughpower 1000W GOLD",
+        "Thermaltake Toughpower Grand 1050W|Thermaltake Toughpower Grand 1050W",
+        "Thermaltake Toughpower 1200W GOLD|Thermaltake Toughpower 1200W GOLD",
+        "Thermaltake Toughpower 1500W Gold|Thermaltake Toughpower 1500W Gold"
     ],
     "fullymodular": [
         "select wattage|select Wattage",
@@ -212,13 +212,13 @@
     ],
     "fm500s": [
         "select psu|Select PSU",
-        "psu|Cooler Master MasterWatt Lite 500 Full Modular"
+        "Cooler Master MasterWatt Lite 500 Full Modular|Cooler Master MasterWatt Lite 500 Full Modular"
     ],
     "fm50080g": [
         "select psu|Select PSU",
-        "psu|Cooler Master MWE Gold 550 - V2 Full Modular",
-        "psu|Cooler Master V550 Gold - V2",
-        "psu|Thermaltake Toughpower SFX 550W Gold - TT Premium Edition"
+        "Cooler Master MWE Gold 550 - V2 Full Modular|Cooler Master MWE Gold 550 - V2 Full Modular",
+        "Cooler Master V550 Gold - V2|Cooler Master V550 Gold - V2",
+        "Thermaltake Toughpower SFX 550W Gold - TT Premium Edition|Thermaltake Toughpower SFX 550W Gold - TT Premium Edition"
     ],
     "fm600": [
         "select rating|Select Rating",
@@ -228,21 +228,21 @@
     ],
     "fm60080b": [
         "select psu|Select PSU",
-        "psu|DeepCool DA600-M",
-        "psu|Thermaltake Smart Pro RGB 650W Bronze"
+        "DeepCool DA600-M|DeepCool DA600-M",
+        "Thermaltake Smart Pro RGB 650W Bronze|Thermaltake Smart Pro RGB 650W Bronze"
     ],
     "fm60080g": [
         "select psu|Select PSU",
-        "psu|Cooler Master MWE Gold 650 - V2 Full Modular",
-        "psu|Cooler Master V650 Gold - V2",
-        "psu|DeepCool PQ650M",
-        "psu|DeepCool DQ650-M-V2L",
-        "psu|Thermaltake Toughpower SFX 650W Gold - TT Premium Edition",
-        "psu|Thermaltake Toughpower GF2 ARGB 650W - TT Premium Edition",
-        "psu|Thermaltake Toughpower GF1 650W - TT Premium Edition",
-        "psu|Thermaltake Toughpower Grand RGB 650W Gold (RGB Sync Edition)",
-        "psu|Thermaltake Toughpower Grand RGB 650W Gold Full Modular",
-        "psu|Thermaltake Toughpower DPS G RGB 650W Gold"
+        "Cooler Master MWE Gold 650 - V2 Full Modular|Cooler Master MWE Gold 650 - V2 Full Modular",
+        "Cooler Master V650 Gold - V2|Cooler Master V650 Gold - V2",
+        "DeepCool PQ650M|DeepCool PQ650M",
+        "DeepCool DQ650-M-V2L|DeepCool DQ650-M-V2L",
+        "Thermaltake Toughpower SFX 650W Gold - TT Premium Edition|Thermaltake Toughpower SFX 650W Gold - TT Premium Edition",
+        "Thermaltake Toughpower GF2 ARGB 650W - TT Premium Edition|Thermaltake Toughpower GF2 ARGB 650W - TT Premium Edition",
+        "Thermaltake Toughpower GF1 650W - TT Premium Edition|Thermaltake Toughpower GF1 650W - TT Premium Edition",
+        "Thermaltake Toughpower Grand RGB 650W Gold (RGB Sync Edition)|Thermaltake Toughpower Grand RGB 650W Gold (RGB Sync Edition)",
+        "Thermaltake Toughpower Grand RGB 650W Gold Full Modular|Thermaltake Toughpower Grand RGB 650W Gold Full Modular",
+        "Thermaltake Toughpower DPS G RGB 650W Gold|Thermaltake Toughpower DPS G RGB 650W Gold"
     ],
     "fm60080p": [
         "select psu|Select PSU",
@@ -257,23 +257,23 @@
     ],
     "fm70080b": [
         "select psu|Select PSU",
-        "psu|Thermaltake Smart Pro RGB 750W Bronze"
+        "Thermaltake Smart Pro RGB 750W Bronze|Thermaltake Smart Pro RGB 750W Bronze"
     ],
     "fm70080g": [
         "select psu|Select PSU",
-        "psu|Cooler Master MWE Gold 750 - V2 Full Modular",
-        "psu|Cooler Master V750 Gold - V2",
-        "psu|DeepCool PQ750M",
-        "psu|DeepCool DQ750-M-V2L",
-        "psu|Thermaltake Toughpower GF2 ARGB 750W - TT Premium Edition",
-        "psu|Gigabyte AORUS P GM 750W",
-        "psu|Gigabyte UD750GM",
-        "psu|Gigabyte P GM 750W"
+        "Cooler Master MWE Gold 750 - V2 Full Modular|Cooler Master MWE Gold 750 - V2 Full Modular",
+        "Cooler Master V750 Gold - V2|Cooler Master V750 Gold - V2",
+        "DeepCool PQ750M|DeepCool PQ750M",
+        "DeepCool DQ750-M-V2L|DeepCool DQ750-M-V2L",
+        "Thermaltake Toughpower GF2 ARGB 750W - TT Premium Edition|Thermaltake Toughpower GF2 ARGB 750W - TT Premium Edition",
+        "Gigabyte AORUS P GM 750W|Gigabyte AORUS P GM 750W",
+        "Gigabyte UD750GM|Gigabyte UD750GM",
+        "Gigabyte P GM 750W|Gigabyte P GM 750W"
     ],
     "fm70080p": [
         "select psu|Select PSU",
-        "psu|Cooler Master XG750 Plus Platinum",
-        "psu|Cooler Master XG750 Platinum"
+        "Cooler Master XG750 Plus Platinum|Cooler Master XG750 Plus Platinum",
+        "Cooler Master XG750 Platinum|Cooler Master XG750 Platinum"
     ],
     "fm800": [
         "select rating|Select Rating",
@@ -283,22 +283,22 @@
     ],
     "fm80080b": [
         "select psu|Select PSU",
-        "psu|Thermaltake Smart Pro RGB 850W Bronze"
+        "Thermaltake Smart Pro RGB 850W Bronze|Thermaltake Smart Pro RGB 850W Bronze"
     ],
     "fm80080g": [
         "select psu|Select PSU",
-        "psu|Cooler Master MWE Gold 850 - V2 Full Modular",
-        "psu|DeepCool PQ850M",
-        "psu|DeepCool DQ850-M-V2L",
-        "psu|Gigabyte P GM 850W",
-        "psu|Gigabyte UD850GM",
-        "psu|Gigabyte AORUS P GM 850W"
+        "Cooler Master MWE Gold 850 - V2 Full Modular|Cooler Master MWE Gold 850 - V2 Full Modular",
+        "DeepCool PQ850M|DeepCool PQ850M",
+        "DeepCool DQ850-M-V2L|DeepCool DQ850-M-V2L",
+        "Gigabyte P GM 850W|Gigabyte P GM 850W",
+        "Gigabyte UD850GM|Gigabyte UD850GM",
+        "Gigabyte AORUS P GM 850W|Gigabyte AORUS P GM 850W"
     ],
     "fm80080p": [
         "select psu|Select PSU",
-        "psu|Cooler Master XG850 Plus Platinum",
-        "psu|Cooler Master XG850 Platinum",
-        "psu|Cooler Master V850 Platinum"
+        "Cooler Master XG850 Plus Platinum|Cooler Master XG850 Plus Platinum",
+        "Cooler Master XG850 Platinum|Cooler Master XG850 Platinum",
+        "Cooler Master V850 Platinum|Cooler Master V850 Platinum"
     ],
     "fm1000": [
         "select rating|Select Rating",
@@ -308,27 +308,27 @@
     ],
     "fm100080g": [
         "select psu|Select PSU",
-        "psu|Cooler Master MWE Gold 1250 - V2 Full Modular",
-        "psu|Cooler Master GX GOLD 1050 - V2 Full Modular",
-        "psu|DeepCool PQ1000M",
-        "psu|Toughpower 1000W GOLD",
-        "psu|Toughpower Grand 1050W",
-        "psu|Toughpower 1200W GOLD",
-        "psu|Toughpower 1500W Gold",
-        "psu|Gigabyte UD1000GM",
-        "psu|Gigabyte P GM 1000W"
+        "Cooler Master MWE Gold 1250 - V2 Full Modular|Cooler Master MWE Gold 1250 - V2 Full Modular",
+        "Cooler Master GX GOLD 1050 - V2 Full Modular|Cooler Master GX GOLD 1050 - V2 Full Modular",
+        "DeepCool PQ1000M|DeepCool PQ1000M",
+        "Thermaltake Toughpower 1000W GOLD|Thermaltake Toughpower 1000W GOLD",
+        "Thermaltake Toughpower Grand 1050W|Thermaltake Toughpower Grand 1050W",
+        "Thermaltake Toughpower 1200W GOLD|Thermaltake Toughpower 1200W GOLD",
+        "Thermaltake Toughpower 1500W Gold|Thermaltake Toughpower 1500W Gold",
+        "Gigabyte UD1000GM|Gigabyte UD1000GM",
+        "Gigabyte P GM 1000W|Gigabyte P GM 1000W"
     ],
     "fm100080p": [
         "select psu|Select PSU",
-        "psu|Cooler Master M2000 Platinum",
-        "psu|Cooler Master V1000 Platinum",
-        "psu|Cooler Master V1300 Platinum",
-        "psu|Cooler Master V1200 Platinum",
-        "psu|Gigabyte AORUS P PM 1200W"
+        "Cooler Master M2000 Platinum|Cooler Master M2000 Platinum",
+        "Cooler Master V1000 Platinum|Cooler Master V1000 Platinum",
+        "Cooler Master V1300 Platinum|Cooler Master V1300 Platinum",
+        "Cooler Master V1200 Platinum|Cooler Master V1200 Platinum",
+        "Gigabyte AORUS P PM 1200W|Gigabyte AORUS P PM 1200W"
     ],
     "fm100080t": [
         "select psu|Select PSU",
-        "psu|Cooler Master MasterWatt Maker 1200 Plus",
-        "psu|Cooler Master MasterWatt Maker 1500 Plus"
+        "Cooler Master MasterWatt Maker 1200 Plus|Cooler Master MasterWatt Maker 1200 Plus",
+        "Cooler Master MasterWatt Maker 1500 Plus|Cooler Master MasterWatt Maker 1500 Plus"
     ]
 }
